#3094 - Fix toolbars visibility when app zoomed in

--- a/packages/ketcher-react/src/Editor.module.less
+++ b/packages/ketcher-react/src/Editor.module.less
@@ -38,8 +38,6 @@
     Arial, sans-serif;
   background-color: @color-background-canvas-light;
   color: @main-color;
-  min-width: 640px;
-  min-height: 400px;
 
   select {
     padding: 0 8px !important;
